.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Category__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Category_Name__c</fullName>
        <formula>Incap311__Category__r.Incap311__Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Category__c</fullName>
        <label>Category</label>
        <referenceTo>Incap311__Category__c</referenceTo>
        <relationshipLabel>Service Catogories</relationshipLabel>
        <relationshipName>Service_Catogories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Type_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Service Catogories</relationshipLabel>
        <relationshipName>Service_Catogories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Service Category</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Category__c</columns>
        <columns>Incap311__Service_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Service Category Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catogories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>